# gps_graph

./: .gitignore  DOCS.md  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
src/: api_requests.py  app.py  args.py  consts.py  utils.py
src/api/: __init__.py  cache.py  requests.py  test.py
src/api_icloud/: __init__.py
src/api_overpass/: __init__.py  requests.py
src/core/: __init__.py  bridge.py  core.py  mapping.py  speed.py  tags.py
src/graph/: __init__.py  a_star.py  graph_ways.py  nodes.py  types.py  utils.py  ways.py
src/gui/: app.py
src/gui/frame/: accueil.py  itineraire.py  search.py  trajetIndications.py  vehicules.py  warning.py
src/logging/: __init__.py  normal.json  silent.json  verbose.json
