[tool.poetry]
name = "gps-graph"
version = "0.1.0"
description = ""
authors = ["SkohTV <qlpth+github@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tkintermapview = "^1.29"
cryptography = "43.0.0"
pyicloud = "^1.0.0"
python-dotenv = "^1.0.1"
unidecode = "^1.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
